# ai-emotions

./: .gitignore  EXECUTION_PLAN.md  README.md  dataset_readme.md  paper.md  pyproject.toml  run_phase2.py  upload_remaining.py  upload_to_hf.py
analysis/: base_vs_instruct.py  random_controls.py  statistics.py
configs/: emotions.py  models.py  needs.py  nouns.py  shutdown.py
core/: activations.py  judge.py  model_loader.py  steering.py  story_generator.py  vectors.py
data/figures/: steering_magnitude_report.json  token_length_audit.json
data/shutdown/: analysis_results.json  analyze_shutdown.py  classifier_agreement.json  human_labels_full.csv  label_responses.py  label_server.py  test_judge.py  test_judge_results.json
data/steering_eval/: analyze_ratings.py  ratings.csv  (+6 more)
figures/: common.py  fig_cosine_sim.py  fig_emotion_residual.py  fig_heatmap.py  fig_intensity.py  fig_logit_lens.py  fig_model_comparison.py  fig_needs_cross.py  fig_pca.py  fig_preference.py  fig_shutdown.py  fig_umap.py  generate_all.py
scripts/: audit_token_lengths.py  check_steering_magnitude.py  deploy.sh  finish_llama_random.sh  generate_need_stories.py  generate_noun_stories.py  generate_prompt_steered.py  hyperstack.py  reclassify_all.py  run_all.py  run_noun_activations.py  run_phase3.py  run_random_rerun.sh  run_shutdown_vm.py  run_steering_sweep.py  run_steering_vm.py  run_stream1.py  run_stream2.py  run_stream3.py  score_chunks.py  score_chunks_2200_3200.py  score_completions.py  score_steering_completions.py  score_steering_sweep.py  sync_from_vm.sh
tests/: test_consistency.py
(+5 files in other folders)
